Don't allow dropping folders in text area

BUG:464260
FIXED-IN:1.10.1